# Shim

./: .gitignore  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benchmark/: .gitignore  README.md  benchmark.ps1
benchmark/shims/: template.shim
cpp/: .clang-format  README.md  build.ps1  build.zig  shim.cpp  shim.vcxproj
cs/: .gitignore  README.md  build.ps1  release-build.ps1  shim.cs  shim.csproj  shim.sln
cs/src/: shim.csproj
rust/: Cargo.toml  README.md  build.ps1  build.rs  shim.rs
test/: run-tests.ps1
zig/: README.md  build.ps1  build.zig  shim.zig
