[package]
name = "shim"
version = "0.1.0"
edition = "2021"
license = "MIT OR Unlicense"

[[bin]]
name = "shim"
path = "shim.rs"

[dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
]

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
debug = false
incremental = false
